[package]
name = "r_env"
version = "0.1.0"
edition = "2021"
authors = ["Lewis Cheng <freedomfirebody@gmail.com>"]
description = "A macro to read environment variables at compile time."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bae2 = "1.0.0"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
